--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git/,*/migrations/,venv/,env/
+exclude = .git/,*/migrations/,venv/,env/,docs/
 max-complexity = 10
 max-line-length = 119
 ignore = N801,N802,N806
